--- a/styles.css
+++ b/styles.css
@@ -2,85 +2,74 @@
     margin: 0;
     padding: 0;
 }
-
+html{
+    width:100%;
+}
 
 body {
-    font-family: 'Oswald', sans-serif;
+    font-family: oswald, sans-serif;
+    background-color: #0c0b0b;
     margin: 0;
     padding: 0;
-    background-color: #000;
-
 }
-
 
 .contenedor {
-
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1300px;
+    margin: 0;
     padding: 20px;
-    background-color: #000;
     display: flex;
     flex-direction: column;
-
 }
 
-
-
 .navegacion-principal {
-
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-
+    justify-content: center;
+    padding: 10px;
 }
 
 .navegacion-principal_menu {
-
-
-    /* preguntar profe */
-
     display: flex;
     align-items: center;
-    list-style-type: none;
     gap: 20px;
+    margin-bottom: 20px;
+    list-style-type: none;
+    
+}
+
+.navegacion-principal_menu-derecha {
+
+        /* preguntar al profesor lupa buscadora */
+
+
+    list-style-type: none;
+    
+    
 
 }
 
+nav a {
 
-.navegacion-principal__menu-derecha {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    /* color blanco a los links menu principal  */
     color: white;
 }
 
+.cabecera_header {
+    /* diseÑo primera caja grandes noticias */
 
-.cabecera {
     display: grid;
-    background-image: url(assets/showcase.jpg);
-    background-size: cover;
-    background-position: center;
+    grid-template-columns: repeat(1, 1fr);
     text-align: center;
     margin-bottom: 30px;
     color: white;
     padding: 25px;
+    background-image: url(assets/showcase.jpg);
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
 }
-
-.cabecera h2 {
-    color: white;
-}
-
-.cabecera p {
-    color: white;
-    margin-bottom: 20px;
-}
-
 
 .boton {
-    /* diseÑo del boton */
-
-    display: inline-block;
+    /*diseÑodel boton registrate*/
     padding: 10px 20px;
     background-color: #404852;
     color: #fff;
@@ -88,40 +77,29 @@ body {
     border-radius: 5px;
     margin-bottom: 15px;
     margin-top: 10px;
+    display: inline-block
 }
 
 .boton:hover {
-    /* para cuando me posiciono en el boton cambie a verde spotify */
     background-color: #12911d;
+    text-decoration: underline;
 }
 
 
 .tarjetas-noticias {
-  /* 4 cajas */
+    /* 4 cajas primeras */
+
     display: flex;
     flex-direction: row;
+    color: white;
     gap: 20px;
     margin-bottom: 10px;
     text-align: center;
-    
 
 }
 
-.tarjetas-noticias__tarjetaimg1 {
 
-
-    background-image: url(assets/news1.jpg);
-    background-size: cover;
-    background-position: center;
-    color: white;
-}
-
-.tarjetas-noticias__tarjetaimg {
-    background-image: url(assets/news2.jpg);
-    background-size: cover;
-    background-position: center;
-    color: white;
-}
+/* imagen de fondo de las 4 cajas */
 
 .tarjetas-noticias__tarjeta1 {
     background-image: url(assets/news1.jpg);
@@ -129,142 +107,133 @@ body {
     background-position: center;
 }
 
+
 .tarjetas-noticias__tarjeta2 {
     background-image: url(assets/news2.jpg);
     background-size: cover;
     background-position: center;
+
 }
 
 .tarjetas-noticias__tarjeta3 {
     background-image: url(assets/news3.jpg);
     background-size: cover;
     background-position: center;
+
 }
 
 
 .tarjetas-noticias__tarjeta4 {
+
     background-image: url(assets/news4.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+
+
+.tarjetas-noticias__tarjetaimg1 {
+    background-image: url(assets/news1.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+
+
+.tarjetas-noticias__tarjetaimg {
+
+    background-image: url(assets/news2.jpg);
     background-size: cover;
     background-position: center;
 }
 
-
-
-.tarjetas-noticias__tarjeta h3 {
-    color: #333;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.tarjetas-noticias__tarjeta p {
-    color: #666;
-    line-height: 1.5;
-    margin-bottom: 15px;
-}
-
-.tarjetas-noticias__tarjeta a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-.tarjetas-noticias__tarjeta a:hover {
-    /* cuando me posiciono aparece la linea de abajo */
-    text-decoration: underline;
-}
-
-.banner-tarjetas{
-
-    display: grid;
-    grid-template-columns: 2,1fr;
-}
 
 
 
 .banner-tarjetas-uno {
 
-    color: #fff;
+    /* primer lorem despues de las 4 cajas */
+    display: grid;
+    display: inline-block;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: white;
+
+}
+
+.banner-tarjetas-uno_contenido {
+
     background-image: url(assets/tech-red.jpg);
     background-size: cover;
     background-position: center;
-    margin-top: 20px;
 }
 
 .banner-tarjetas-dos {
-
-    color: #fff;
+    /* ultimo lorem */
+    display: grid;
+    display: inline-block;
     text-align: center;
     margin-bottom: 10px;
+    color: white;
+
+}
+
+.banner-tarjetas-dos__contenido {
     background-image: url(assets/Image-five.jpg);
     background-size: cover;
     background-position: center;
 }
 
+
 .banner-tarjetas-uno h2,
 .banner-tarjetas-dos h2 {
-
     margin: 20px;
 }
 
-
-
-
 .social {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    margin-bottom: 10px;
+    align-content: center;
+    color: white;
+    margin: 50px;
 }
+
 
 .social__enlaces {
     margin-top: 10px;
+
 }
+
 
 .social__enlaces a {
+
+    /* iconos redes sociales y sus tamaÑos */
+
+    margin-top: 15px;
     color: white;
-    font-size: 1.5rem;
-    margin-right: 10px;
+    margin-right: 15px;
+    font-size: 2rem;
 }
 
-.social p {
-    color: white;
+.enlaces-pie{
+    background-color: #404852;
+    display: flex;
+    justify-content: space-around;
+    padding: 40px;
+    
+    
 }
 
-
-.enlaces-pie {
-    background-color: #262635;
-    color: #fff;
-    padding: 20px 0;
-
+.enlaces-pie_contenedor{
+    display: flex;
+    flex-direction: row;
+    gap: 400px;
 }
 
-.enlaces-pie__contenedor {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.pie{
+    color: aliceblue;
     text-align: center;
-}
-
-.enlaces-pie__lista {
-    /* para eliminar los puntos  */
-    list-style-type: none;
-}
-
-.enlaces-pie__lista h3 {
-    margin-bottom: 10px;
-}
-
-.enlaces-pie__lista a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.enlaces-pie__lista a:hover {
-    text-decoration: underline;
-}
-
-.pie {
-    background-color: #262635;
-    color: #4e4b4b;
-    text-align: center;
-    padding: 10px ;
     
 }
