--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,11 @@
     margin: 0;
     padding: 0;
 }
-html{
-    width:100%;
+
+html {
+    width: 100%;
+    background-color: #fff;
+    margin: 40px;
 }
 
 body {
@@ -23,6 +26,7 @@ body {
 
 .navegacion-principal {
     display: flex;
+    
     justify-content: center;
     padding: 10px;
 }
@@ -33,17 +37,17 @@ body {
     gap: 20px;
     margin-bottom: 20px;
     list-style-type: none;
-    
+
 }
 
 .navegacion-principal_menu-derecha {
 
-        /* preguntar al profesor lupa buscadora */
+    /* preguntar al profesor lupa buscadora */
 
 
     list-style-type: none;
-    
-    
+
+
 
 }
 
@@ -95,7 +99,7 @@ nav a {
     gap: 20px;
     margin-bottom: 10px;
     text-align: center;
-
+    height: 200px;
 }
 
 
@@ -217,23 +221,18 @@ nav a {
     font-size: 2rem;
 }
 
-.enlaces-pie{
+.enlaces-pie {
     background-color: #404852;
-    display: flex;
-    justify-content: space-around;
-    padding: 40px;
-    
-    
+
+
+
+
 }
 
-.enlaces-pie_contenedor{
-    display: flex;
-    flex-direction: row;
-    gap: 400px;
-}
+.enlaces-pie_contenedor {}
 
-.pie{
+.pie {
     color: aliceblue;
     text-align: center;
-    
+
 }
