--- a/styles.css
+++ b/styles.css
@@ -1,142 +1,170 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-    width: 100%;
-    background-color: #fff;
-    margin: 40px;
+    max-width: 1300px;
+    margin: 80px;
+    background-color: white;
 }
 
 body {
     font-family: oswald, sans-serif;
-    background-color: #0c0b0b;
+    background-color: #000;
     margin: 0;
     padding: 0;
+
 }
 
-.contenedor {
-    max-width: 1300px;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
+
+.boton-menu {
+    color: #fff;
 }
+
+
 
 .navegacion-principal {
-    display: flex;
-    
-    justify-content: center;
-    padding: 10px;
-}
 
-.navegacion-principal_menu {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    list-style-type: none;
-
-}
-
-.navegacion-principal_menu-derecha {
-
-    /* preguntar al profesor lupa buscadora */
-
-
-    list-style-type: none;
-
+    margin-left: 300px;
+    padding: 0 20px;
+    max-width: 2000px;
 
 
 }
 
-nav a {
 
-    /* color blanco a los links menu principal  */
+.navegacion-principal__menu {
+    /* inicio buscar ....... */
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    list-style: none;
+    margin: 30px;
+    gap: 30px;
+    ;
+}
+
+a {
+    text-decoration: none;
     color: white;
 }
+
+.navegacion-principal__menu-derecha {
+
+    list-style-type: none;
+
+}
+
 
 .cabecera_header {
-    /* diseÑo primera caja grandes noticias */
 
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    text-align: center;
-    margin-bottom: 30px;
+    /* PRIMER CAJA GRANDES NOTICIAS */
+
     color: white;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    text-align: center;
+    margin: 30px;
     padding: 25px;
     background-image: url(assets/showcase.jpg);
     background-size: cover;
     background-position: center;
-    display: inline-block;
+    display: block;
+
 }
 
 .boton {
-    /*diseÑodel boton registrate*/
+    /* diseÑo del boton registrate */
     padding: 10px 20px;
     background-color: #404852;
     color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
     margin-bottom: 15px;
     margin-top: 10px;
-    display: inline-block
+    border-radius: 5px;
+    display: inline-block;
+
+
 }
+
 
 .boton:hover {
     background-color: #12911d;
     text-decoration: underline;
 }
 
-
 .tarjetas-noticias {
-    /* 4 cajas primeras */
+    /* 4 PRIMERS CAJAS */
 
     display: flex;
     flex-direction: row;
     color: white;
-    gap: 20px;
-    margin-bottom: 10px;
+    gap: 20PX;
     text-align: center;
-    height: 200px;
+    height: 300PX;
+    margin: 30PX;
+
+
+
+
 }
 
 
-/* imagen de fondo de las 4 cajas */
 
 .tarjetas-noticias__tarjeta1 {
     background-image: url(assets/news1.jpg);
     background-size: cover;
     background-position: center;
+ 
 }
+
+
+
 
 
 .tarjetas-noticias__tarjeta2 {
     background-image: url(assets/news2.jpg);
     background-size: cover;
     background-position: center;
-
 }
 
 .tarjetas-noticias__tarjeta3 {
+
     background-image: url(assets/news3.jpg);
     background-size: cover;
     background-position: center;
-
 }
-
 
 .tarjetas-noticias__tarjeta4 {
 
     background-image: url(assets/news4.jpg);
     background-size: cover;
     background-position: center;
-
 }
 
 
-.tarjetas-noticias__tarjetaimg1 {
+
+.banner-tarjetas-uno {
+    /* primer lorem despues de las 4 cajas  */
+
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    text-align: center;
+    align-items: center;
+    margin: 30px;
+    padding: 25px;
+    background-image: url(assets/tech-red.jpg);
+    color: #fff;
+    height: 250px;
+
+}
+
+.tarjetas-noticias__tarjetaimg {
+
     background-image: url(assets/news1.jpg);
     background-size: cover;
     background-position: center;
@@ -144,95 +172,83 @@ nav a {
 }
 
 
-.tarjetas-noticias__tarjetaimg {
+.tarjetas-noticias__tarjetaimg2 {
 
     background-image: url(assets/news2.jpg);
     background-size: cover;
     background-position: center;
-}
 
-
-
-
-.banner-tarjetas-uno {
-
-    /* primer lorem despues de las 4 cajas */
-    display: grid;
-    display: inline-block;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    color: white;
-
-}
-
-.banner-tarjetas-uno_contenido {
-
-    background-image: url(assets/tech-red.jpg);
-    background-size: cover;
-    background-position: center;
 }
 
 .banner-tarjetas-dos {
     /* ultimo lorem */
+
     display: grid;
-    display: inline-block;
     text-align: center;
-    margin-bottom: 10px;
+    align-items: center;
     color: white;
-
-}
-
-.banner-tarjetas-dos__contenido {
     background-image: url(assets/Image-five.jpg);
     background-size: cover;
     background-position: center;
-}
+    height: 300px;
+    margin: 30px;
 
-
-.banner-tarjetas-uno h2,
-.banner-tarjetas-dos h2 {
-    margin: 20px;
 }
 
 .social {
+
     display: flex;
     flex-direction: column;
     text-align: center;
     align-content: center;
     color: white;
     margin: 50px;
-}
-
-
-.social__enlaces {
-    margin-top: 10px;
 
 }
 
 
 .social__enlaces a {
+    /* iconos redes sociales y sus tama;os */
 
-    /* iconos redes sociales y sus tamaÑos */
 
-    margin-top: 15px;
-    color: white;
+    margin-top: 5px;
+    font-size: 3rem;
     margin-right: 15px;
-    font-size: 2rem;
+
 }
+
 
 .enlaces-pie {
     background-color: #404852;
-
-
-
+    padding: 100px;
 
 }
 
-.enlaces-pie_contenedor {}
+.enlaces-pie__contenedor {
 
-.pie {
-    color: aliceblue;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     text-align: center;
 
+}
+
+.enlaces-pie__lista {
+
+    /* elimina los puntos o los estilos */
+    list-style: none;
+
+}
+
+.enlaces-pie__lista li {
+    /* espaciado entre los titulillos */
+
+    margin-bottom: 25px;
+}
+
+
+.pie {
+    display: grid;
+    justify-content: center;
+    color: #fff;
+    font-size: 1.5rem;
 }
