--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,15 @@
 }
 
 html {
-    max-width: 1300px;
-    margin: 80px;
+    max-width: 2000px;
+    margin: 50px;
     background-color: white;
 }
 
 body {
     font-family: oswald, sans-serif;
-    background-color: #000;
+    background-color:#000;
+   
     margin: 0;
     padding: 0;
 
@@ -30,9 +31,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 300px;
-    padding: 0 20px;
-    max-width: 2000px;
+    margin-left: 500px;
+    padding: 0 20px; 
+    
 
 
 }
@@ -42,9 +43,8 @@ body {
     /* inicio buscar ....... */
     display: flex;
     flex-direction: row;
-    align-content: center;
     list-style: none;
-    margin: 30px;
+    margin-bottom: 40px;
     gap: 30px;
     ;
 }
@@ -57,6 +57,7 @@ a {
 .navegacion-principal__menu-derecha {
 
     list-style-type: none;
+    margin-bottom: 40px;
 
 }
 
@@ -113,37 +114,12 @@ a {
 
 }
 
-
-
-.tarjetas-noticias__tarjeta1 {
-    background-image: url(assets/news1.jpg);
+img{
+    width: 100%;
+    height: 200px;
     background-size: cover;
     background-position: center;
- 
-}
-
-
-
-
-
-.tarjetas-noticias__tarjeta2 {
-    background-image: url(assets/news2.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.tarjetas-noticias__tarjeta3 {
-
-    background-image: url(assets/news3.jpg);
-    background-size: cover;
-    background-position: center;
-}
-
-.tarjetas-noticias__tarjeta4 {
-
-    background-image: url(assets/news4.jpg);
-    background-size: cover;
-    background-position: center;
+    
 }
 
 
@@ -160,25 +136,10 @@ a {
     background-image: url(assets/tech-red.jpg);
     color: #fff;
     height: 250px;
+    margin-top: 120px;
 
 }
 
-.tarjetas-noticias__tarjetaimg {
-
-    background-image: url(assets/news1.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
-
-
-.tarjetas-noticias__tarjetaimg2 {
-
-    background-image: url(assets/news2.jpg);
-    background-size: cover;
-    background-position: center;
-
-}
 
 .banner-tarjetas-dos {
     /* ultimo lorem */
